--- a/index.html
+++ b/index.html
@@ -886,37 +886,37 @@
       <div></div>
       <div></div>
       <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>   
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div> 
-      <div></div> 
+      <div class="gameoverdiv"></div>
+      <div class="gameoverdiv"></div>
+      <div class="gameoverdiv"></div> 
+      <div class="gameoverdiv"></div> 
+      <div class="gameoverdiv"></div>
+      <div class="gameoverdiv"></div>
+      <div class="gameoverdiv"></div>
+      <div class="gameoverdiv"></div> 
+      <div class="gameoverdiv"></div> 
+      <div class="gameoverdiv"></div>
+      <div class="gameoverdiv"></div>
+      <div class="gameoverdiv"></div>
+      <div class="gameoverdiv"></div>
+      <div class="gameoverdiv"></div> 
+      <div class="gameoverdiv"></div> 
+      <div class="gameoverdiv"></div>
+      <div class="gameoverdiv"></div>
+      <div class="gameoverdiv"></div>
+      <div class="gameoverdiv"></div> 
+      <div class="gameoverdiv"></div> 
+      <div class="gameoverdiv"></div>
+      <div class="gameoverdiv"></div>
+      <div class="gameoverdiv"></div>
+      <div class="gameoverdiv"></div>
+      <div class="gameoverdiv"></div> 
+      <div class="gameoverdiv"></div> 
+      <div class="gameoverdiv"></div>
+      <div class="gameoverdiv"></div>
+      <div class="gameoverdiv"></div>
+      <div class="gameoverdiv"></div> 
+      <div class="gameoverdiv"></div> 
     </div>
    
   </section>
